--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <h2 class="mb-4">TABLEROS INGENIERIA DE RED</h2>
     
     <a href="https://app.powerbi.com/links/TD9lyfwVOm?ctid=8d2f79c3-03e7-4dc9-92d3-1e6dbcbb791a&pbi_source=linkShare" target="_blank" class="tablero-link">Informe General de Red</a>
-    <p class="descripcion">Información consolidada de la red de Media Commerce área Planeación De Red</p>
+    <p class="descripcion">Información consolidada de la red de Media Commerce por Planeación De Red</p>
     
 </body>
 </html>
